--- a/OptimumJewelryPricing.ipynb
+++ b/OptimumJewelryPricing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "bd9372fc-6bc4-4fd2-989c-840720224d5f",
    "metadata": {},
    "outputs": [
@@ -10,119 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting seaborn\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\python312\\lib\\site-packages (from seaborn) (2.2.5)\n",
-      "Requirement already satisfied: pandas>=1.2 in c:\\python312\\lib\\site-packages (from seaborn) (2.2.3)\n",
-      "Collecting matplotlib!=3.6.1,>=3.4 (from seaborn)\n",
-      "  Using cached matplotlib-3.10.3-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib!=3.6.1,>=3.4->seaborn)\n",
-      "  Using cached contourpy-1.3.2-cp312-cp312-win_amd64.whl.metadata (5.5 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib!=3.6.1,>=3.4->seaborn)\n",
-      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.58.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python312\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Using cached matplotlib-3.10.3-cp312-cp312-win_amd64.whl (8.1 MB)\n",
-      "Using cached contourpy-1.3.2-cp312-cp312-win_amd64.whl (223 kB)\n",
-      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Installing collected packages: cycler, contourpy, matplotlib, seaborn\n",
-      "\n",
-      "   ---------- ----------------------------- 1/4 [contourpy]\n",
-      "   ---------- ----------------------------- 1/4 [contourpy]\n",
-      "   ---------- ----------------------------- 1/4 [contourpy]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   -------------------- ------------------- 2/4 [matplotlib]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ------------------------------ --------- 3/4 [seaborn]\n",
-      "   ---------------------------------------- 4/4 [seaborn]\n",
-      "\n",
-      "Successfully installed contourpy-1.3.2 cycler-0.12.1 matplotlib-3.10.3 seaborn-0.13.2\n"
+      "Requirement already satisfied: seaborn in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (0.11.2)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (3.5.2)\n",
+      "Requirement already satisfied: pandas>=0.23 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.21.5)\n",
+      "Requirement already satisfied: scipy>=1.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.9.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.25.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.9)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.2.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from pandas>=0.23->seaborn) (2022.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n"
      ]
     }
    ],
@@ -132,12 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a496ca13-220b-4c79-af5f-ead7e730d3cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -146,15 +50,11 @@
    "id": "b26201b1-8b9f-421e-b921-2fc66015f9f6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b9b9b42e-9c57-40ae-9ad6-319d8a5ccceb",
    "metadata": {},
    "outputs": [],
@@ -165,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "5a83f14d-a501-4463-ab38-66c2f99a0160",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Data/Jewelry_Dataset.csv\")\n",
-    "# df = pd.read_csv(r\"C:\\Users\\TestimOni\\OneDrive - Ulster University\\Desktop\\OptimumJewelryPricing\\Data\\Jewelry_Dataset.csv\")\n"
+    "data_set = pd.read_csv(\"Data/Jewelry_Dataset.csv\")\n",
+    "# df = pd.read_csv(r\"C:\\Users\\TestimOni\\OneDrive - Ulster University\\Desktop\\OptimumJewelryPricing\\Data\\Jewelry_Dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "3443dca2-9918-47e0-8c01-24d07653f595",
    "metadata": {},
    "outputs": [
@@ -324,18 +224,18 @@
        "4        NaN     red  gold       NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data_set.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "db6527b5-e13d-4b5a-83ec-d5427793dcb1",
    "metadata": {},
    "outputs": [
@@ -345,18 +245,18 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(data)"
+    "type(data_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "c073c837-c629-49cb-9263-19e848a51102",
    "metadata": {},
    "outputs": [
@@ -366,24 +266,24 @@
        "(95910, 13)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "data_set.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "75982e32-d312-4d14-8d9e-de854c59ae37",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the columns for the data (df) for better readability using the provided dictionary\n",
-    "data.columns = [\n",
+    "data_set.columns = [\n",
     "    \"Order_DateTime\",\n",
     "    \"Order_ID\",\n",
     "    \"Product_ID\",\n",
@@ -401,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "eb87a18c-0a11-43bd-a0ca-812e7dc31ca9",
    "metadata": {},
    "outputs": [
@@ -549,18 +449,18 @@
        "4  1.515916e+18            NaN        red       gold       NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data_set.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "9fd1e2e2-4c0d-486e-9d47-95fb911afeb8",
    "metadata": {},
    "outputs": [
@@ -570,18 +470,18 @@
        "(95910, 13)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "data_set.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "fe18e3e1-1b2c-4990-a0e2-cc4cdff20235",
    "metadata": {},
    "outputs": [
@@ -604,19 +504,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check for and count missing values\n",
-    "data.isnull().sum()"
+    "data_set.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "a99afc6f-865d-49fa-a234-a334915e849f",
    "metadata": {},
    "outputs": [
@@ -639,19 +539,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# When exploring the data, it is good to check its FEATURE CARDINALITY\n",
-    "data.nunique()"
+    "data_set.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "abf0e84d-44da-45a5-b044-b956ff2dab11",
    "metadata": {},
    "outputs": [
@@ -792,19 +692,19 @@
        "max    34448.600000  1.554297e+18  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get a statistical summary of the data\n",
-    "data.describe()"
+    "data_set.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "596c4a60-0594-472a-a885-5238a5b57db3",
    "metadata": {},
    "outputs": [
@@ -837,24 +737,88 @@
    ],
    "source": [
     "# also\n",
-    "data.info()"
+    "data_set.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "90de89b1-aa22-40dc-bc93-5109c2278c6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check duplicate values\n",
-    "duplicate_enti = len(data.loc[data.duplicated()])"
+    "duplicate_entries = len(data_set.loc[data_set.duplicated()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "861fab5c-21bb-4f7c-98ac-643429ee95ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Invarian features: Features with cadinality of 1\n",
+    "invariant_feature = data_set.nunique()[data_set.nunique() == 1].index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1eaab286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SKU_Quantity']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invariant_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ee723795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for label distribution\n",
+    "label_dist = data_set[\"Price_in_USD\"].skew()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f3c1b690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.95906072625981"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_dist"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861fab5c-21bb-4f7c-98ac-643429ee95ce",
+   "id": "8c942f67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -876,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
