--- a/Notebooks/OptimumJewelryPricing.ipynb
+++ b/Notebooks/OptimumJewelryPricing.ipynb
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d737bdd2",
+   "id": "2d79b379",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2fdefe87",
+   "id": "1abd5896",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d8b43c98",
+   "id": "7bbad5bf",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4b9e3afd",
+   "id": "6fe5c242",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "73c2fabc",
+   "id": "af512ea0",
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8f59fa7a",
+   "id": "281dafc0",
    "metadata": {},
    "outputs": [
     {
@@ -1119,19 +1119,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd53fe01",
+   "execution_count": 46,
+   "id": "a3b103e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'jewelry.pendant', 'jewelry.necklace', 'jewelry.earring',\n",
+       "       'jewelry.ring', 'jewelry.brooch', 'jewelry.bracelet',\n",
+       "       'electronics.clocks', 'jewelry.souvenir', '230.12', '202.36',\n",
+       "       '1098.03', '321.78', '1128.62', '81.27', '34.25', '582.16',\n",
+       "       '227.37', '234.22', '150.55', '131.82', '2123.15', '109.45',\n",
+       "       '49.22', '472.47', '205.38', '2746.44', '51.08', '231.12', '76.97',\n",
+       "       '3054.73', '184.90', '380.10', '357.49', '15.47', '135.33',\n",
+       "       '719.75', '93.01', '177.95', 'jewelry.stud', '102.10', '595.75',\n",
+       "       '469.56', '427.07', '53.62', '77.53', '1469.18', '355.27',\n",
+       "       '184.89', '154.66', '300.58', '83.73', '271.19', '3294.21',\n",
+       "       '278.04', '3626.26', '126.03', '283.52', '114.38', '89.04', '8.22',\n",
+       "       '124.88', '89.73', '171.23', '136.93', '19.04', '158.77', '187.10',\n",
+       "       '151.92', '1845.89', '87.23', '248.58', '596.48', '208.88',\n",
+       "       '193.11', '169.84', '1447.68', '45.07', '136.85', '282.05',\n",
+       "       '61.51', '210.21', '137.12', '147.81', '419.45', '825.27',\n",
+       "       '300.16', '541.78', '308.74', '766.85', '410.82', '101.23', '2.88',\n",
+       "       '1356.16', '13.42', '35.21', '134.79', '626.58', '13.70', '108.53',\n",
+       "       '119.01', '7.40', '4.79', '153.97', '482.47', '427.36', '289.18',\n",
+       "       '25.48', '1858.49', '21.70', '11.77', '198.89', '17.51', '574.66',\n",
+       "       '1319.93', '393.05', '358.22', '2282.19', '114.93', '371.23',\n",
+       "       '63.56', '88.77', '133.70', '117.81', '166.03', '130.41', '195.75',\n",
+       "       '104.79', '228.59', '1686.93', '65.89', '242.19', '252.47',\n",
+       "       '210.41', '363.42', '149.04', '157.95', '176.30', '160.96',\n",
+       "       '316.30', '258.77', '268.36', '838.90', '250.96', '832.01',\n",
+       "       '312.33', '318.71', '323.60', '205.34', '608.22', '343.84',\n",
+       "       '598.22', '508.08', '245.67', '338.36', '75.21', '573.81',\n",
+       "       '691.51', '476.68', '247.68', '286.71', '863.67', '236.58',\n",
+       "       '644.66', '40.82', '1376.99', '1.23', '621.23', '3454.79', '65.62',\n",
+       "       '59.73', '571.30', '70.96', '271.26', '958.84', '527.26', '271.16',\n",
+       "       '284.66', '261.64', '493.01', '35.48', '446.16', '526.41',\n",
+       "       '2517.08', '331.51', '312.88', '148.63', '451.21', '369.82',\n",
+       "       '537.40', '231.51', '316.34', '451.10', '283.49', '787.67',\n",
+       "       '131.92', '495.48', '5.48', '186.03', '484.49', '331.23', '133.85',\n",
+       "       '323.70', '2635.07', '297.22', '0.00', '259.58', '108.33',\n",
+       "       '4876.49', '308.08', '190.27', '916.44', '132.53', '1829.37',\n",
+       "       '2208.90', '75.76', '278.01', '662.30', '253.77'], dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# From the above, we need to look deeper into the data as it seems there are currupted items in our data\n",
-    "data_set[\"Category_Alias\"].uniqu()"
+    "# From the above, we need to look deeper into the data as it seems there are corrupted items in our data\n",
+    "data_set[\"Category_Alias\"].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839d7830",
+   "id": "647bfebf",
    "metadata": {},
    "outputs": [],
    "source": []
